<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E9E9E">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_monto_solicitado"
        android:inputType="text"
        android:hint="@string/monto_solicitado"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_monto_otorgado"
        android:inputType="text"
        android:hint="@string/monto_otorgado"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_monton_comprobado"
        android:inputType="text"
        android:hint="@string/monton_comprobado"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_comprobacion_valida"
        android:inputType="text"
        android:hint="@string/comprobacion_valida"

        />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_solicitud_viaticos"
    android:inputType="text"
    android:hint="@string/solicitud_valida"

    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_partida"
        android:inputType="text"
        android:hint="@string/partida"

        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_margin="@dimen/margin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:id="@+id/bt_save"
            android:background="@color/colorAccent"
            android:textColor="@color/coloTextButton"
            />
        <Button
            android:layout_margin="@dimen/margin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar"
            android:id="@+id/bt_list"
            android:background="@color/colorAccent"
            android:textColor="@color/coloTextButton"
            />
    </LinearLayout>
</LinearLayout>